--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,8 +9,11 @@
 <body>
     <h1>Pizza Margherita</h1>
 
+<div>
     <img src="../images/pizza.jpeg">
+</div>
 
+<div>
     <p>Pizza is like a big, cheesy hug in food form. 
         It's the food that unites us all, whether you're a pepperoni 
         lover, a veggie fanatic, or a pineapple-on-pizza rebel. 
@@ -21,7 +24,9 @@
         So go ahead, grab a slice and feel the love (and the cheese) 
         that pizza has to offer!
     </p>
+</div>
 
+<div>
     <h2>Ingredients</h2>
 
     <ol>
@@ -42,6 +47,8 @@
         <li>Salt: 1 teaspoon salt</li>
     </ol>
 
+</div>
+<div>
     <p>
         To make the pizza dough, mix together the all-purpose flour and
         salt in a large bowl. In a separate bowl,
@@ -66,10 +73,12 @@
         extra-virgin olive oil over the pizza, and sprinkle with salt. 
         Bake the pizza for 10-12 minutes, or until the crust is 
         golden brown and the cheese is melted and bubbly.
-
-
     </p>
+</div>
 
+<div>
+    <a href="../index.html">Back to Homepage</a>
+</div>
     
 </body>
 </html>
