--- a/recipes/risotto.html
+++ b/recipes/risotto.html
@@ -9,8 +9,11 @@
 <body>
     <h1>Risotto</h1>
     
+<div>
     <img src="../images/risotto.jpeg">
+</div>
 
+<div>
     <h2>Description:</h2>
 
     <p>Risotto is like a high maintenance partner - 
@@ -18,6 +21,7 @@
         and care, 
         but in the end, it's totally worth it!
     </p>
+</div>
     
     <h2>Ingredients:</h2>
 <ol>
@@ -71,6 +75,7 @@
     </li>
 </ol>
 
+<a href="../index.html">Back to Homepage</a>
 
 </body>
 </html>
